Add custom  navbar styles

--- a/templates/clansphere/assets/less/helpers/variables.less
+++ b/templates/clansphere/assets/less/helpers/variables.less
@@ -16,3 +16,10 @@
 @color-white:                               rgb(255, 255, 255); //#FFFFFF
 
 @color-cardinal:                            rgb(190, 30, 45);   //#BE1E2D
+
+
+//  ##NAVBAR
+//  ------------------------------------------------------------
+@navbar-toogle-color:                       @color-white;
+@navbar-toogle-height:                      36px;
+@navbar-toogle-width:                       @navbar-toogle-height;
