--- a/templates/clansphere/assets/less/main.less
+++ b/templates/clansphere/assets/less/main.less
@@ -26,6 +26,7 @@
 
 //  ##COMPONENTS
 //  ------------------------------------------------------------
+@import "components/navbar";
 
 
 //  ##LAYOUT
