Add bootstrap style to quotes

--- a/templates/clansphere/assets/less/main.less
+++ b/templates/clansphere/assets/less/main.less
@@ -27,6 +27,7 @@
 //  ##COMPONENTS
 //  ------------------------------------------------------------
 @import "components/navbar";
+@import "components/clansphere";
 
 
 //  ##LAYOUT
