--- a/templates/clansphere/assets/less/components/clansphere.less
+++ b/templates/clansphere/assets/less/components/clansphere.less
@@ -2,4 +2,9 @@
 blockquote.quote {
     font-size: 1.15em;
     margin-bottom: 0;
+
+    //  ##BLOCKQUOTE SMALL
+    & small:before {
+        content: '';
+    }
 }
