--- a/templates/clansphere/assets/less/helpers/variables.less
+++ b/templates/clansphere/assets/less/helpers/variables.less
@@ -23,3 +23,18 @@
 @navbar-toogle-color:                       @color-white;
 @navbar-toogle-height:                      36px;
 @navbar-toogle-width:                       @navbar-toogle-height;
+
+
+//  ##GRID
+//  ------------------------------------------------------------
+@grid-padding:                              0px;
+
+@grid-link-hover-bg:                        rgba(0, 0, 0, .025);
+@grid-link-border:                          1px solid rgba(0, 0, 0, .05);
+@grid-link-hover-border:                    1px solid rgba(0, 0, 0, .1);
+@grid-link-color:                           @font-color-base;
+@grid-link-hover-color:                     @project-color;
+@grid-link-margin:                          15px;
+@grid-link-padding:                         20px 0;
+
+@grid-image-margin:                         15px;
