--- a/templates/clansphere/assets/css/main.css
+++ b/templates/clansphere/assets/css/main.css
@@ -6575,3 +6575,37 @@ blockquote.quote {
 blockquote.quote small:before {
   content: '';
 }
+.panel-title {
+  position: relative;
+}
+.panel-title > small {
+  position: absolute;
+  right: 0;
+  top: 3px;
+}
+.grid {
+  padding-bottom: 0;
+}
+.grid .col-md-3 {
+  margin-bottom: 15px;
+}
+.grid .col-md-3 > a {
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
+  color: #000000;
+  display: block;
+  padding: 20px 0;
+  text-align: center;
+  text-shadow: 0 1px 0 #ffffff;
+  -webkit-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+.grid .col-md-3 > a > img {
+  margin-bottom: 15px;
+}
+.grid .col-md-3 > a:hover {
+  background-color: rgba(0, 0, 0, 0.025);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #be1e2d;
+}
