Change variable @grid-image-margin to @grid-link-image-margin

--- a/templates/clansphere/assets/less/components/clansphere.less
+++ b/templates/clansphere/assets/less/components/clansphere.less
@@ -43,7 +43,7 @@ blockquote.quote {
             .transition(all .15s linear);
 
             //  ##GRID COL LINK IMAGE
-            > img { margin-bottom: @grid-image-margin; }
+            > img { margin-bottom: @grid-link-image-margin; }
 
             //  ##GRID COL LINK :HOVER
             &:hover {
