--- a/templates/clansphere/assets/less/helpers/variables.less
+++ b/templates/clansphere/assets/less/helpers/variables.less
@@ -34,7 +34,6 @@
 @grid-link-hover-border:                    1px solid rgba(0, 0, 0, .1);
 @grid-link-color:                           @font-color-base;
 @grid-link-hover-color:                     @project-color;
+@grid-link-image-margin:                    15px;
 @grid-link-margin:                          15px;
 @grid-link-padding:                         20px 0;
-
-@grid-image-margin:                         15px;
