--- a/templates/clansphere/assets/less/helpers/variables.less
+++ b/templates/clansphere/assets/less/helpers/variables.less
@@ -37,3 +37,14 @@
 @grid-link-image-margin:                    15px;
 @grid-link-margin:                          15px;
 @grid-link-padding:                         20px 0;
+
+
+//  ##PAGINATION
+//  ------------------------------------------------------------
+@pagination-margin:                         0;
+
+
+//  ##FORM-GROUP
+//  ------------------------------------------------------------
+@form-group-margin:                         25px;
+@form-help-color:                           @gray-light;
